2008-07-24  Josh Stone  <joshua.i.stone@intel.com>

	* runtime/autoconf-module-nsections.c: removed
	* runtime/autoconf-oneachcpu-retry.c: added

2008-07-21  David Smith  <dsmith@redhat.com>

	* task_finder_vma.c (__stp_tf_vma_initialize): New function to
	initialize the free list.
	(__stp_tf_vma_put_free_entry): Puts a vma entry back on the free
	list.
	(__stp_tf_add_vma): Instead of allocating a vma entry, grab one
	from the free list by calling __stp_tf_vma_put_free_entry().
	(__stp_tf_remove_vma_entry): Instead of freeing a vma entry, call
	__stp_tf_vma_put_free_entry() to put it on the free list instead.
	* task_finder.c (stap_start_task_finder): Calls
	__stp_tf_vma_initialize().

2008-07-18  Frank Ch. Eigler  <fche@elastic.org>

	BZ 442528, From Masami Hiramatsu <mhiramat@redhat.com>
	* regs-ia64.c (ia64_stap_get_arbsp): New function.

2008-07-17  Frank Ch. Eigler  <fche@elastic.org>

	* sym.c (_stp_kallsyms_lookup, _stp_module_relocate): Add
	multiple-section-per-module support.
	* sym.h (_stp_section): New type for separately relocatable
	_stp_module pieces.

2008-07-12  Frank Ch. Eigler  <fche@elastic.org>

	PR 6738.
	* loc2c-runtime.h: #include {asm,linux}/uaccess.h as autoconf'd.
	* unwind/i386.h (user_mode_vm, FIX_VDSO): #ifdef for older kernels.
	* unwind/x86_64.h (VSYSCALL_START): speculative #ifdef for same.
	* unwind/unwind.h (BUILD_BUG_ON_ZER): Ditto.

2008-07-10  Frank Ch. Eigler  <fche@elastic.org>

	PR 6736.
	* sym.c (_stp_module_relocate): Generalized to search all
	_stp_module[]s.
	(_stp_kallsyms_lookup_name): Gone.
	(_stp_find_module_by_addr): Rewritten.
	(_stp_get_unwind_info): Temporarily gone.
	* sym.h (_stp_module): Simplify structure.
	* unwind.c: Adapt just enough to compile with eliminated elements.

	* probes.stp: Removed unused file.

2008-07-09  Mark Wielaard  <mwielaard@redhat.com>

	PR 6732
	* autoconf-real-parent.c: New file.
	* task_finder.c (__stp_utrace_task_finder_report_exec): Define